[package]
name = "pca9685"
version = "0.1.0"
edition = "2021"
exclude = [ ".devcontainer", ".github", ".vscode", ".git*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"

linux-embedded-hal = "0.3.2"
pwm-pca9685 = "0.3.1"
exitcode = "1.1.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
