[package]
name = "pca9685"
version = "1.0.2"
edition = "2021"
description = "A PCA9685 library for managing servos and LEDs"
license = "GPL-3.0-or-later"
exclude = [ ".devcontainer", ".github", ".vscode", ".git*" ]
repository = "https://github.com/kerrys-learning-lab/pca9685"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"

linux-embedded-hal = "0.3.2"
pwm-pca9685 = "0.3.1"
exitcode = "1.1.2"
serde = { version = "1.0.252", features = ["derive"] }
serde_yaml = "0.9.17"
